--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,14 @@
 Package: Rokemon
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("David", "Schoch", email = "david.schoch@gess.ethz.ch", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.2)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports: extrafont,
+    png,
+    grid,
+    ggplot2
+RoxygenNote: 6.0.1
