--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(annotate_pogo)
 export(gghealth)
 export(import_pokefont)
+export(poke_pal)
 export(theme_gameboy)
 export(theme_instinct)
 export(theme_mystic)
