--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(annotate_pogo)
 export(gghealth)
 export(import_pokefont)
 export(poke_pal)
+export(poke_pie)
 export(theme_gameboy)
 export(theme_instinct)
 export(theme_mystic)
