added gba theme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(import_pokefont)
 export(poke_pal)
 export(poke_pie)
 export(theme_gameboy)
+export(theme_gba)
 export(theme_instinct)
 export(theme_mystic)
 export(theme_rocket)
