added color scales

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(gghealth)
 export(import_pokefont)
 export(poke_pal)
 export(poke_pie)
+export(scale_color_poketype)
+export(scale_fill_poketype)
 export(theme_gameboy)
 export(theme_gba)
 export(theme_instinct)
